--- a/src/Test/resources/shiro-authenticator-all-success.ini
+++ b/src/Test/resources/shiro-authenticator-all-success.ini
@@ -4,7 +4,7 @@ securityManager.authenticator=$authenticator
 #指定securityManager.authenticator的authenticationStrategy
 allSuccessfulStrategy=org.apache.shiro.authc.pam.AllSuccessfulStrategy
 securityManager.authenticator.authenticationStrategy=$allSuccessfulStrategy
-myRealm1=com.shiro.test.MyRealm1
-myRealm2=com.shiro.test.MyRealm2
-myRealm3=com.shiro.test.MyRealm3
+myRealm1=com.shiro.test.chapter2.realm.MyRealm1
+myRealm2=com.shiro.test.chapter2.realm.MyRealm2
+myRealm3=com.shiro.test.chapter2.realm.MyRealm3
 securityManager.realms=$myRealm1,$myRealm3
