--- a/src/Test/resources/shiro-multi-realm.ini
+++ b/src/Test/resources/shiro-multi-realm.ini
@@ -1,5 +1,5 @@
 #声明一个realm
-myRealm1=com..shiro.test.MyRealm1
-myRealm2=com..shiro.test.MyRealm2
+myRealm1=com..shiro.test.chapter2.realm.MyRealm1
+myRealm2=com..shiro.test.chapter2.realm.MyRealm2
 #指定securityManager的realms实现
 securityManager.realms=$myRealm1,$myRealm2
