--- a/src/Test/resources/shiro-realm.ini
+++ b/src/Test/resources/shiro-realm.ini
@@ -1,4 +1,4 @@
 #声明一个realm
-myRealm1=com.shiro.test.MyRealm1
+myRealm1=com.shiro.test.chapter2.realm.MyRealm1
 #指定securityManager的realms实现
 securityManager.realms=$myRealm1
