--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
       <artifactId>druid</artifactId>
       <version>0.2.23</version>
     </dependency>
+
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache-core</artifactId>
+      <version>2.6.6</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>ShiroDemo</finalName>
